♻️ ✨  챌린지 목록 조회 및 챌린지 참여자 정보 조회